Beta (#96)
* Remove commented-out code (S125)

* Expand ShippingNotificationJobHandlerTest coverage

* Fix S7158 (use isEmpty() to test for emptiness)

Replace `length() == 0` / `length() > 0` checks with `isEmpty()` /
`!isEmpty()` for String and StringBuilder, per SonarQube java:S7158.

- HebrewCalendarService: 3 StringBuilder occurrences in
  drawWrappedTextInMoon
- AuthenticationIntegrationTest: 3 String JWT-part checks
- CalendarServiceIntegrationTest: 1 String SVG check

* Fix assertEquals argument order (S3415)

* Narrow assertThrows lambdas (S5778)

Hoist preparatory method invocations (LocalDate.of, List.of, String.repeat,
UUID.toString) out of assertThrows lambdas so each lambda contains only the
single call expected to throw. Resolves SonarQube java:S5778 issues across
EventServiceTest, OrderServiceTest, and CalendarGraphQLUnitTest.

* Add MoonPhaseCalculatorTest covering phase boundaries (#90)

Covers calculateMoonPhasesForYear, calculateMoonPhase,
calculateMoonPhaseValue, calculateIllumination, calculatePosition,
and isMoonPhaseDay. Cross-checks all 50 published 2024 phase events
(NASA GSFC / Astropixels) within a 1-day tolerance, exercises
year-boundary lunation wrap, leap-year and non-leap-year traversal,
and 1970/2100 edge years. Brings MoonPhaseCalculator instruction
coverage to 88%.

* Parameterize similar tests in CalendarRenderingServiceTest (S5976) (#95)

Convert 6 clusters of similar @Test methods into @ParameterizedTest
to address SonarQube java:S5976 ("Similar tests should be grouped in
a single Parameterized test"). Assertion coverage is preserved for
every input value.

Clusters parameterized:
- testGetCellBackgroundColor weekday/highlight flag (boolean)
- testShowHolidayText event display modes (4 string values)
- testLargeMoonEnabled branches (moonDisplayMode + moonSize CSV)
- testGenerateMoonIlluminationSVG locations + phases (CSV)
- testGetCellBackgroundColor weekendBgColor resolution (CSV)
- testRenderCustomEmoji display modes (3 string